--- a/Kehlet.Generators.AutoInterface/Kehlet.Generators.AutoInterface.csproj
+++ b/Kehlet.Generators.AutoInterface/Kehlet.Generators.AutoInterface.csproj
@@ -36,5 +36,11 @@
             <DependentUpon>InterfaceGenerator.cs</DependentUpon>
         </Compile>
     </ItemGroup>
-
+    
+    <ItemGroup>
+        <None Include="readme.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
 </Project>
