--- a/Kehlet.Generators.AutoInterface/Properties/launchSettings.json
+++ b/Kehlet.Generators.AutoInterface/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {
     "DebugRoslynSourceGenerator": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "../Test/Test.csproj"
+      "targetProject": "../Kehlet.Generators.AutoInterface.Sample/Kehlet.Generators.AutoInterface.Sample.csproj"
     }
   }
 }
