--- a/Kehlet.Generators.AutoInterface/Kehlet.Generators.AutoInterface.csproj
+++ b/Kehlet.Generators.AutoInterface/Kehlet.Generators.AutoInterface.csproj
@@ -7,19 +7,24 @@
         <LangVersion>latest</LangVersion>
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 
+        <IsPackable>true</IsPackable>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <IncludeBuildOutput>false</IncludeBuildOutput>
+
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Authors>Anders Kehlet</Authors>
         <Copyright>2023 Anders Kehlet</Copyright>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/Serdan/Kehlet.Generators.AutoInterface</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Serdan/Kehlet.Generators.AutoInterface</RepositoryUrl>
-        <Version>1.0.2</Version>
+        <Version>1.0.4</Version>
         <PackageReadmeFile>readme.md</PackageReadmeFile>
+        <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.8.0" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -38,9 +43,7 @@
     </ItemGroup>
     
     <ItemGroup>
-        <None Include="readme.md">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
+        <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers\dotnet\cs" Visible="false"/>
+        <None Include="readme.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 </Project>
